--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -7,15 +7,20 @@
         let isLast = last;
         let isEven = even;
         let isOdd = odd;" 
-        class="list-group-item"
+        class="list-group-item d-flex justify-content-between align-items-center" 
         [ngClass]="{
-                    'list-group-item-dark': isLast,
-                    'list-group-item-primary': isEven }">
+            'list-group-item-dark': isLast,
+            'list-group-item-primary': isEven 
+        }"> <!-- d-flex similar a usar flexbox, justify-content-between da un espacio entre los componentes, align-items-center alinea los componentes-->
 
-        <span class="text-primary"> {{ i + 1 }} </span>
-        <span>{{ character.name}} - </span>
-        <strong>Power: </strong>
-        <span>{{ character.power}}</span> 
+        <div>
+            <span class="text-primary"> {{ i + 1 }} </span>
+            <span>{{ character.name}} - </span>
+            <strong>Power: </strong>
+            <span>{{ character.power}}</span> 
+        </div>
+
+        <button class="btn btn-danger" (click)="onDeleteCharacte( character.id )">X</button>
 
     </li>
   
